# fullstack-mlops-gcp

./: .gitignore  .pre-commit-config.yaml  Makefile  Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.yaml  README.md  index.ts  main.py  package.json  pyproject.toml  run.py  todo.txt
app/: index.ts  pnpm-lock.yaml
app/infra/: k8sProvider.ts  mlflow.ts
configs/: iris_pipeline.yaml
data/: .gitignore  twitter-data.csv.dvc
docs/: 0-prerequisites.md  1-infrastructure-setup.md  2-teardown-instruction.md  3-local-application-deployment.md  4-zenml-stack-config.md
fastapi-app-1/: Dockerfile  pyproject.toml
fastapi-app-1/app/: app.py
infra/: getK8sProvider.ts  mlflow.ts  phpMyAdmin.ts
infra/components/CustomBucket/: CustomBucket.ts
infra/components/CustomCluster/: CustomCluster.ts
infra/global/: cluster.ts  index.ts  minio.ts  postgres.ts  promGraf.ts  secrets.ts
infra/local/: minio.ts  mysql.ts
infra/shared/: index.ts  minio.ts  promGraf.ts
infra/shared/monitoring/: monitoringNs.ts  promGraf.ts
infra/utils/: utils.ts
k8s/minio/base/: deployment.yaml  services.yaml
k8s/mlflow/base/: deployment.yaml  services.yaml
k8s/zenml/base/: deployment.yaml  services.yaml
pipelines/: __init__.py  iris_pipeline.py
steps/: __init__.py  evaluate_model.py  load_data.py  train_model.py
steps/iris_pipeline_steps/: evaluate_model.py  load_data.py  train_model.py
terraform/: main.tf  versions.tf
terraform/live/: root.hcl
terraform/live/dev/: terragrunt.hcl
terraform/modules/ecr/: main.tf  variables.tf
terraform/modules/eks/: main.tf  output.tf  variables.tf
(+32 files in other folders)
