[project]
name = "fullstack-mlops-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=4.2.0",
    "zenml>=0.80.1",
]

[tool.uv.workspace]
members = ["fastapi-app-1"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = 'tests/|build/|dist/|\.venv/'
