[project]
name = "fullstack-mlops-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=4.2.0",
    "zenml>=0.80.1",
]

[tool.uv.workspace]
members = ["fastapi-app-1"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = 'tests/|build/|dist/|\.venv/'
